# issue-bas-test-startdir

./: README.md  pyproject.toml
src/issue_bas_test_startdir/: dummy.lpy
test1/a/: test1_test.lpy
test2/a/: test2_test.lpy
